--- a/static/references/trinity_plugins/interfaces/walletplugin.walletmanager.html
+++ b/static/references/trinity_plugins/interfaces/walletplugin.walletmanager.html
@@ -1979,6 +1979,9 @@
 						<a href="../modules/cordovadeviceplugin.html">Cordova<wbr>Device<wbr>Plugin</a>
 					</li>
 					<li class=" tsd-kind-module tsd-is-not-exported">
+						<a href="../modules/cordovafileplugin.html">Cordova<wbr>File<wbr>Plugin</a>
+					</li>
+					<li class=" tsd-kind-module tsd-is-not-exported">
 						<a href="../modules/cordovamediacaptureplugin.html">Cordova<wbr>Media<wbr>Capture<wbr>Plugin</a>
 					</li>
 					<li class=" tsd-kind-module tsd-is-not-exported">
