--- a/static/references/trinity_plugins/modules/cordovamediacaptureplugin.html
+++ b/static/references/trinity_plugins/modules/cordovamediacaptureplugin.html
@@ -189,6 +189,9 @@
 					<li class=" tsd-kind-module tsd-is-not-exported">
 						<a href="cordovadeviceplugin.html">Cordova<wbr>Device<wbr>Plugin</a>
 					</li>
+					<li class=" tsd-kind-module tsd-is-not-exported">
+						<a href="cordovafileplugin.html">Cordova<wbr>File<wbr>Plugin</a>
+					</li>
 					<li class="current tsd-kind-module tsd-is-not-exported">
 						<a href="cordovamediacaptureplugin.html">Cordova<wbr>Media<wbr>Capture<wbr>Plugin</a>
 					</li>
