--- a/static/references/trinity_plugins/globals.html
+++ b/static/references/trinity_plugins/globals.html
@@ -74,6 +74,7 @@
 								<li class="tsd-kind-module tsd-is-not-exported"><a href="modules/cordovacameraplugin.html" class="tsd-kind-icon">Cordova<wbr>Camera<wbr>Plugin</a></li>
 								<li class="tsd-kind-module tsd-is-not-exported"><a href="modules/cordovadevicemotionplugin.html" class="tsd-kind-icon">Cordova<wbr>Device<wbr>Motion<wbr>Plugin</a></li>
 								<li class="tsd-kind-module tsd-is-not-exported"><a href="modules/cordovadeviceplugin.html" class="tsd-kind-icon">Cordova<wbr>Device<wbr>Plugin</a></li>
+								<li class="tsd-kind-module tsd-is-not-exported"><a href="modules/cordovafileplugin.html" class="tsd-kind-icon">Cordova<wbr>File<wbr>Plugin</a></li>
 								<li class="tsd-kind-module tsd-is-not-exported"><a href="modules/cordovamediacaptureplugin.html" class="tsd-kind-icon">Cordova<wbr>Media<wbr>Capture<wbr>Plugin</a></li>
 								<li class="tsd-kind-module tsd-is-not-exported"><a href="modules/cordovanetworkinfoplugin.html" class="tsd-kind-icon">Cordova<wbr>Network<wbr>Info<wbr>Plugin</a></li>
 								<li class="tsd-kind-module tsd-is-not-exported"><a href="modules/didplugin.html" class="tsd-kind-icon">DIDPlugin</a></li>
@@ -82,28 +83,12 @@
 							</ul>
 						</section>
 						<section class="tsd-index-section tsd-is-not-exported">
-							<h3>Enumerations</h3>
-							<ul class="tsd-index-list">
-								<li class="tsd-kind-enum tsd-is-not-exported"><a href="enums/localfilesystem.html" class="tsd-kind-icon">Local<wbr>File<wbr>System</a></li>
-							</ul>
-						</section>
-						<section class="tsd-index-section tsd-is-not-exported">
 							<h3>Interfaces</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-interface tsd-is-not-exported"><a href="interfaces/cordova.html" class="tsd-kind-icon">Cordova</a></li>
-								<li class="tsd-kind-interface tsd-is-not-exported"><a href="interfaces/directoryentry.html" class="tsd-kind-icon">Directory<wbr>Entry</a></li>
-								<li class="tsd-kind-interface tsd-is-not-exported"><a href="interfaces/directoryreader.html" class="tsd-kind-icon">Directory<wbr>Reader</a></li>
 								<li class="tsd-kind-interface tsd-is-not-exported"><a href="interfaces/document.html" class="tsd-kind-icon">Document</a></li>
-								<li class="tsd-kind-interface tsd-is-not-exported"><a href="interfaces/entry.html" class="tsd-kind-icon">Entry</a></li>
-								<li class="tsd-kind-interface tsd-is-not-exported"><a href="interfaces/fileentry.html" class="tsd-kind-icon">File<wbr>Entry</a></li>
-								<li class="tsd-kind-interface tsd-is-not-exported"><a href="interfaces/fileerror.html" class="tsd-kind-icon">File<wbr>Error</a></li>
-								<li class="tsd-kind-interface tsd-is-not-exported"><a href="interfaces/filesaver.html" class="tsd-kind-icon">File<wbr>Saver</a></li>
-								<li class="tsd-kind-interface tsd-is-not-exported"><a href="interfaces/filesystem.html" class="tsd-kind-icon">File<wbr>System</a></li>
-								<li class="tsd-kind-interface tsd-is-not-exported"><a href="interfaces/filewriter.html" class="tsd-kind-icon">File<wbr>Writer</a></li>
-								<li class="tsd-kind-interface tsd-is-not-exported"><a href="interfaces/flags.html" class="tsd-kind-icon">Flags</a></li>
 								<li class="tsd-kind-interface tsd-is-not-exported"><a href="interfaces/iosplayoptions.html" class="tsd-kind-icon">Ios<wbr>Play<wbr>Options</a></li>
 								<li class="tsd-kind-interface tsd-is-not-exported"><a href="interfaces/media.html" class="tsd-kind-icon">Media</a></li>
-								<li class="tsd-kind-interface tsd-is-not-exported"><a href="interfaces/metadata.html" class="tsd-kind-icon">Metadata</a></li>
 								<li class="tsd-kind-interface tsd-is-not-exported"><a href="interfaces/navigator.html" class="tsd-kind-icon">Navigator</a></li>
 								<li class="tsd-kind-interface tsd-is-not-exported"><a href="interfaces/notification.html" class="tsd-kind-icon">Notification</a></li>
 								<li class="tsd-kind-interface tsd-is-not-exported"><a href="interfaces/notificationpromptresult.html" class="tsd-kind-icon">Notification<wbr>Prompt<wbr>Result</a></li>
@@ -114,8 +99,6 @@
 						<section class="tsd-index-section tsd-is-not-exported">
 							<h3>Variables</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-variable tsd-is-not-exported"><a href="globals.html#fileerror" class="tsd-kind-icon">File<wbr>Error</a></li>
-								<li class="tsd-kind-variable tsd-is-not-exported"><a href="globals.html#filewriter" class="tsd-kind-icon">File<wbr>Writer</a></li>
 								<li class="tsd-kind-variable tsd-is-not-exported"><a href="globals.html#media" class="tsd-kind-icon">Media</a></li>
 								<li class="tsd-kind-variable tsd-is-not-exported"><a href="globals.html#statusbar" class="tsd-kind-icon">Status<wbr>Bar</a></li>
 								<li class="tsd-kind-variable tsd-is-not-exported"><a href="globals.html#device" class="tsd-kind-icon">device</a></li>
@@ -126,93 +109,6 @@
 			</section>
 			<section class="tsd-panel-group tsd-member-group tsd-is-not-exported">
 				<h2>Variables</h2>
-				<section class="tsd-panel tsd-member tsd-kind-variable tsd-is-not-exported">
-					<a name="fileerror" class="tsd-anchor"></a>
-					<h3>File<wbr>Error</h3>
-					<div class="tsd-signature tsd-kind-icon">File<wbr>Error<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
-					<aside class="tsd-sources">
-					</aside>
-					<div class="tsd-type-declaration">
-						<h4>Type declaration</h4>
-						<ul class="tsd-parameters">
-							<li class="tsd-parameter">
-								<h5>constructor<span class="tsd-signature-symbol">: </span>function</h5>
-								<ul class="tsd-signatures tsd-kind-constructor tsd-parent-kind-type-literal tsd-is-not-exported">
-									<li class="tsd-signature tsd-kind-icon">new __type<span class="tsd-signature-symbol">(</span>code<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="interfaces/fileerror.html" class="tsd-signature-type">FileError</a></li>
-								</ul>
-								<ul class="tsd-descriptions">
-									<li class="tsd-description">
-										<aside class="tsd-sources">
-										</aside>
-										<h4 class="tsd-parameters-title">Parameters</h4>
-										<ul class="tsd-parameters">
-											<li>
-												<h5>code: <span class="tsd-signature-type">number</span></h5>
-											</li>
-										</ul>
-										<h4 class="tsd-returns-title">Returns <a href="interfaces/fileerror.html" class="tsd-signature-type">FileError</a></h4>
-									</li>
-							</ul>        </li>
-							<li class="tsd-parameter">
-								<h5>ABORT_<wbr>ERR<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span></h5>
-							</li>
-							<li class="tsd-parameter">
-								<h5>ENCODING_<wbr>ERR<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span></h5>
-							</li>
-							<li class="tsd-parameter">
-								<h5>INVALID_<wbr>MODIFICATION_<wbr>ERR<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span></h5>
-							</li>
-							<li class="tsd-parameter">
-								<h5>INVALID_<wbr>STATE_<wbr>ERR<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span></h5>
-							</li>
-							<li class="tsd-parameter">
-								<h5>NOT_<wbr>FOUND_<wbr>ERR<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span></h5>
-							</li>
-							<li class="tsd-parameter">
-								<h5>NOT_<wbr>READABLE_<wbr>ERR<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span></h5>
-							</li>
-							<li class="tsd-parameter">
-								<h5>NO_<wbr>MODIFICATION_<wbr>ALLOWED_<wbr>ERR<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span></h5>
-							</li>
-							<li class="tsd-parameter">
-								<h5>PATH_<wbr>EXISTS_<wbr>ERR<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span></h5>
-							</li>
-							<li class="tsd-parameter">
-								<h5>QUOTA_<wbr>EXCEEDED_<wbr>ERR<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span></h5>
-							</li>
-							<li class="tsd-parameter">
-								<h5>SECURITY_<wbr>ERR<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span></h5>
-							</li>
-							<li class="tsd-parameter">
-								<h5>SYNTAX_<wbr>ERR<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span></h5>
-							</li>
-							<li class="tsd-parameter">
-								<h5>TYPE_<wbr>MISMATCH_<wbr>ERR<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span></h5>
-							</li>
-						</ul>
-					</div>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-variable tsd-is-not-exported">
-					<a name="filewriter" class="tsd-anchor"></a>
-					<h3>File<wbr>Writer</h3>
-					<div class="tsd-signature tsd-kind-icon">File<wbr>Writer<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
-					<aside class="tsd-sources">
-					</aside>
-					<div class="tsd-type-declaration">
-						<h4>Type declaration</h4>
-						<ul class="tsd-parameters">
-							<li class="tsd-parameter">
-								<h5>DONE<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span></h5>
-							</li>
-							<li class="tsd-parameter">
-								<h5>INIT<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span></h5>
-							</li>
-							<li class="tsd-parameter">
-								<h5>WRITING<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span></h5>
-							</li>
-						</ul>
-					</div>
-				</section>
 				<section class="tsd-panel tsd-member tsd-kind-variable tsd-is-not-exported">
 					<a name="media" class="tsd-anchor"></a>
 					<h3>Media</h3>
@@ -356,6 +252,9 @@
 						<a href="modules/cordovadeviceplugin.html">Cordova<wbr>Device<wbr>Plugin</a>
 					</li>
 					<li class=" tsd-kind-module tsd-is-not-exported">
+						<a href="modules/cordovafileplugin.html">Cordova<wbr>File<wbr>Plugin</a>
+					</li>
+					<li class=" tsd-kind-module tsd-is-not-exported">
 						<a href="modules/cordovamediacaptureplugin.html">Cordova<wbr>Media<wbr>Capture<wbr>Plugin</a>
 					</li>
 					<li class=" tsd-kind-module tsd-is-not-exported">
@@ -374,50 +273,17 @@
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
-					<li class=" tsd-kind-enum tsd-is-not-exported">
-						<a href="enums/localfilesystem.html" class="tsd-kind-icon">Local<wbr>File<wbr>System</a>
-					</li>
 					<li class=" tsd-kind-interface tsd-is-not-exported">
 						<a href="interfaces/cordova.html" class="tsd-kind-icon">Cordova</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-is-not-exported">
-						<a href="interfaces/directoryentry.html" class="tsd-kind-icon">Directory<wbr>Entry</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-is-not-exported">
-						<a href="interfaces/directoryreader.html" class="tsd-kind-icon">Directory<wbr>Reader</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-is-not-exported">
 						<a href="interfaces/document.html" class="tsd-kind-icon">Document</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-is-not-exported">
-						<a href="interfaces/entry.html" class="tsd-kind-icon">Entry</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-is-not-exported">
-						<a href="interfaces/fileentry.html" class="tsd-kind-icon">File<wbr>Entry</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-is-not-exported">
-						<a href="interfaces/fileerror.html" class="tsd-kind-icon">File<wbr>Error</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-is-not-exported">
-						<a href="interfaces/filesaver.html" class="tsd-kind-icon">File<wbr>Saver</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-is-not-exported">
-						<a href="interfaces/filesystem.html" class="tsd-kind-icon">File<wbr>System</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-is-not-exported">
-						<a href="interfaces/filewriter.html" class="tsd-kind-icon">File<wbr>Writer</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-is-not-exported">
-						<a href="interfaces/flags.html" class="tsd-kind-icon">Flags</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-is-not-exported">
 						<a href="interfaces/iosplayoptions.html" class="tsd-kind-icon">Ios<wbr>Play<wbr>Options</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-is-not-exported">
 						<a href="interfaces/media.html" class="tsd-kind-icon">Media</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-is-not-exported">
-						<a href="interfaces/metadata.html" class="tsd-kind-icon">Metadata</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-is-not-exported">
 						<a href="interfaces/navigator.html" class="tsd-kind-icon">Navigator</a>
@@ -433,12 +299,6 @@
 					</li>
 					<li class=" tsd-kind-interface tsd-is-not-exported">
 						<a href="interfaces/window.html" class="tsd-kind-icon">Window</a>
-					</li>
-					<li class=" tsd-kind-variable tsd-is-not-exported">
-						<a href="globals.html#fileerror" class="tsd-kind-icon">File<wbr>Error</a>
-					</li>
-					<li class=" tsd-kind-variable tsd-is-not-exported">
-						<a href="globals.html#filewriter" class="tsd-kind-icon">File<wbr>Writer</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-is-not-exported">
 						<a href="globals.html#media" class="tsd-kind-icon">Media</a>
