--- a/static/references/trinity_plugins/index.html
+++ b/static/references/trinity_plugins/index.html
@@ -107,6 +107,9 @@
 						<a href="modules/cordovadeviceplugin.html">Cordova<wbr>Device<wbr>Plugin</a>
 					</li>
 					<li class=" tsd-kind-module tsd-is-not-exported">
+						<a href="modules/cordovafileplugin.html">Cordova<wbr>File<wbr>Plugin</a>
+					</li>
+					<li class=" tsd-kind-module tsd-is-not-exported">
 						<a href="modules/cordovamediacaptureplugin.html">Cordova<wbr>Media<wbr>Capture<wbr>Plugin</a>
 					</li>
 					<li class=" tsd-kind-module tsd-is-not-exported">
@@ -125,50 +128,17 @@
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
-					<li class=" tsd-kind-enum tsd-is-not-exported">
-						<a href="enums/localfilesystem.html" class="tsd-kind-icon">Local<wbr>File<wbr>System</a>
-					</li>
 					<li class=" tsd-kind-interface tsd-is-not-exported">
 						<a href="interfaces/cordova.html" class="tsd-kind-icon">Cordova</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-is-not-exported">
-						<a href="interfaces/directoryentry.html" class="tsd-kind-icon">Directory<wbr>Entry</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-is-not-exported">
-						<a href="interfaces/directoryreader.html" class="tsd-kind-icon">Directory<wbr>Reader</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-is-not-exported">
 						<a href="interfaces/document.html" class="tsd-kind-icon">Document</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-is-not-exported">
-						<a href="interfaces/entry.html" class="tsd-kind-icon">Entry</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-is-not-exported">
-						<a href="interfaces/fileentry.html" class="tsd-kind-icon">File<wbr>Entry</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-is-not-exported">
-						<a href="interfaces/fileerror.html" class="tsd-kind-icon">File<wbr>Error</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-is-not-exported">
-						<a href="interfaces/filesaver.html" class="tsd-kind-icon">File<wbr>Saver</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-is-not-exported">
-						<a href="interfaces/filesystem.html" class="tsd-kind-icon">File<wbr>System</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-is-not-exported">
-						<a href="interfaces/filewriter.html" class="tsd-kind-icon">File<wbr>Writer</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-is-not-exported">
-						<a href="interfaces/flags.html" class="tsd-kind-icon">Flags</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-is-not-exported">
 						<a href="interfaces/iosplayoptions.html" class="tsd-kind-icon">Ios<wbr>Play<wbr>Options</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-is-not-exported">
 						<a href="interfaces/media.html" class="tsd-kind-icon">Media</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-is-not-exported">
-						<a href="interfaces/metadata.html" class="tsd-kind-icon">Metadata</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-is-not-exported">
 						<a href="interfaces/navigator.html" class="tsd-kind-icon">Navigator</a>
@@ -184,12 +154,6 @@
 					</li>
 					<li class=" tsd-kind-interface tsd-is-not-exported">
 						<a href="interfaces/window.html" class="tsd-kind-icon">Window</a>
-					</li>
-					<li class=" tsd-kind-variable tsd-is-not-exported">
-						<a href="globals.html#fileerror" class="tsd-kind-icon">File<wbr>Error</a>
-					</li>
-					<li class=" tsd-kind-variable tsd-is-not-exported">
-						<a href="globals.html#filewriter" class="tsd-kind-icon">File<wbr>Writer</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-is-not-exported">
 						<a href="globals.html#media" class="tsd-kind-icon">Media</a>
